Fix white-on-white buttons on iPhone

--- a/css/admintool.css
+++ b/css/admintool.css
@@ -100,6 +100,7 @@ body {
     font-size: 100%;
     margin: 4px;
     background-color: white;
+    color: black;
     border: 1px solid #AAA;
     border-radius: 6px;
     padding: 2px 8px;
